--- a/PIFinal/web/index.xhtml
+++ b/PIFinal/web/index.xhtml
@@ -11,6 +11,7 @@
         <style type="text/css">
             .ui-widget {
                 font-size: 11px !important;
+                background-color: antiquewhite !important;
             }
         </style>
 
